# audio-effects

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  status_codes.hpp
src/cmdline/: CMakeLists.txt  cmdline.cpp  cmdline.hpp
src/math/: CMakeLists.txt  util_math.cpp  util_math.hpp
src/pitch/: CMakeLists.txt
src/pitch/inc/: pitch.hpp
src/resample/: CMakeLists.txt  resample.cpp  resample.hpp
src/resample/inc/: resample.hpp
src/resample/src/: resample.cpp
src/resample/test/: test_resample.cpp
src/util/: CMakeLists.txt  status_codes.hpp  util_math.cpp  util_math.hpp
src/util/cmdline/: CMakeLists.txt
src/util/cmdline/inc/: cmdline.hpp
src/util/cmdline/src/: cmdline.cpp
src/util/math/: CMakeLists.txt
src/util/math/src/: util_math.cpp
src/vocoder/: CMakeLists.txt  pitch.hpp  vocoder.cpp  vocoder.hpp  vocoder_types.hpp
src/vocoder/inc/: pitch.hpp  vocoder.hpp  vocoder_types.hpp
src/vocoder/src/: vocoder.cpp
src/vocoder/test/: test_vocoder.cpp
